--- a/exploration_testing.Rmd
+++ b/exploration_testing.Rmd
@@ -13,11 +13,12 @@ get_weather_cleaned <- function(st_code){
         s3_url <- paste0(url_base, st_code, '_cleaned.csv')
         wea<-read.csv(s3_url)
         wea$date <- lubridate::ymd(wea$date)
+        wea
 }
 ```
 
 ```{r}
-st_code <- "KDEN"
+st_code <- "PAVL"
 wea <- get_weather_cleaned(st_code)
 head(wea)
 ```
@@ -27,11 +28,6 @@ library(tidyverse)
 glimpse(wea)
 ```
 
-```{r}
-wea$date <- lubridate::ymd(wea$date)
-#wea$date
-glimpse(wea)
-```
 
 
 ```{r}
@@ -39,18 +35,45 @@ library(ggplot2)
 ggplot(wea,aes(date,mean_temp))+geom_point()
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file).
+
+```{r}
+get_current_year <- function(wea,the_year){
+        wea_current <- wea %>%
+                filter(year==the_year)
+        wea_current
+}
+
+weac <- get_current_year(wea,2016)
+head(weac)
+```
+
+
+```{r}
+get_all_years <- function(year1,year2,st_code,month_start,month_end){
+        url_base <- 'https://s3-us-west-2.amazonaws.com/wundergrounddaily/cleaned/'
+        s3_url <- paste0(url_base, st_code, '_cleaned.csv')
+        wea<-read.csv(s3_url)
+        wea$date <- lubridate::ymd(wea$date)
+        wea <- wea %>% 
+                filter(year>=year1 & year<=year2) #%>% 
+               # filter(month>=month_start & month<=month_end)
+        wea
+}        
+wea_all <- get_all_years(1980,2016,'KDEN',2,5)
+head(wea_all)
+
+```
 
 
 ```{r}
 get_avg_temps <- function(wea){
-        wea %>% 
+        wea_avg <- wea %>% 
                 group_by(yday) %>% 
                 summarise(tavg=mean(mean_temp,na.rm=TRUE),
                           sd_low=tavg-sd(mean_temp,na.rm=TRUE),
-                          sd_igh=tavg+sd(mean_temp,na.r=TRUE)) 
+                          sd_high=tavg+sd(mean_temp,na.r=TRUE)) 
+        wea_avg
 }
 ```
 
